updated writeup to note pruning implementation. ready to submit?

--- a/hw5_sol.tex
+++ b/hw5_sol.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
 \documentclass[paper=a4, fontsize=11pt]{scrartcl} % A4 paper and 11pt font size
@@ -40,12 +40,12 @@
 \usepackage[margin=.5in]{geometry}
 \setlength{\parindent}{0cm}
 %----------------------------------------------------------------------------------------
-%	TITLE SECTION
+%   TITLE SECTION
 %----------------------------------------------------------------------------------------
 
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 
-\title{	
+\title{ 
 \normalfont \normalsize 
 %\textsc{Arbitrary Labs} \\ [5pt]
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
@@ -56,11 +56,11 @@
 \author{Eddie Groshev, Rishi Sharma, Connor Braa}
 
 \begin{document}
-	
+    
 \maketitle % Print the title
 
 %----------------------------------------------------------------------------------------
-%	BEGIN DOCUMENT
+%   BEGIN DOCUMENT
 %----------------------------------------------------------------------------------------
 
 % -------------------- PROBLEM 1 --------------------
@@ -80,7 +80,8 @@
 \item Gini impurity
 \item Misclassification impurity
 \end{enumerate}
-\item Allows the user to explicitly pass in a subset of feature used for training.
+\item Allows for reduced-error pruning.
+\item Allows the user to explicitly pass in a subset of features to be used for training.
 \item Has functions to make bagging and random forests easier to implement.
 \end{enumerate}
 \end{enumerate}
